syntax = "proto3";
import "Common.proto";
option java_multiple_files = true;
package com.beyt.anouncy.common.search.v1;

message SearchParam {
  string query = 1;
  com.beyt.anouncy.common.v1.PageablePTO pageable = 2;
}

service AnnounceSearchService {
  rpc save(com.beyt.anouncy.common.v1.AnnouncePTO) returns (com.beyt.anouncy.common.v1.AnnouncePTO);
  rpc saveAll(com.beyt.anouncy.common.v1.AnnounceListPTO) returns (com.beyt.anouncy.common.v1.AnnounceListPTO);
  rpc findById(com.beyt.anouncy.common.v1.IdStr) returns (com.beyt.anouncy.common.v1.AnnouncePTO);
  rpc existsById(com.beyt.anouncy.common.v1.IdStr) returns (com.beyt.anouncy.common.v1.Exist);
  rpc findAllById(com.beyt.anouncy.common.v1.IdStrList) returns (com.beyt.anouncy.common.v1.AnnounceListPTO);
  rpc findAll(com.beyt.anouncy.common.v1.PageablePTO) returns (com.beyt.anouncy.common.v1.AnnounceListPTO);
  rpc count(com.beyt.anouncy.common.v1.Empty) returns (com.beyt.anouncy.common.v1.Count);
  rpc deleteById(com.beyt.anouncy.common.v1.IdStr) returns (com.beyt.anouncy.common.v1.Empty);
  rpc delete(com.beyt.anouncy.common.v1.AnnouncePTO) returns (com.beyt.anouncy.common.v1.Empty);
  rpc deleteAllById(com.beyt.anouncy.common.v1.IdStrList) returns (com.beyt.anouncy.common.v1.Empty);
  rpc deleteAll(com.beyt.anouncy.common.v1.AnnounceListPTO) returns (com.beyt.anouncy.common.v1.Empty);

  rpc search(SearchParam) returns (com.beyt.anouncy.common.v1.AnnouncePagePTO);
}
